# Circular_logging

./: CMakeLists.txt  CircularLogger.cpp  CircularLogger.h  README.md  config.json  main.cpp  test_CircularLogger.cpp
